--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Created by https://www.toptal.com/developers/gitignore/api/flutter,dart,androidstudio
-# Edit at https://www.toptal.com/developers/gitignore?templates=flutter,dart,androidstudio
+
+# Created by https://www.toptal.com/developers/gitignore/api/flutter,dart,androidstudio,xcode
+# Edit at https://www.toptal.com/developers/gitignore?templates=flutter,dart,androidstudio,xcode
 
 ### Dart ###
 # See https://www.dartlang.org/guides/libraries/private-files
@@ -78,6 +79,40 @@ lib/generated_plugin_registrant.dart
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+### Xcode ###
+# Xcode
+#
+# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+
+## User settings
+xcuserdata/
+
+## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
+*.xcscmblueprint
+*.xccheckout
+
+## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
+DerivedData/
+*.moved-aside
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+
+## Gcc Patch
+/*.gcno
+
+### Xcode Patch ###
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata/
+!*.xcworkspace/contents.xcworkspacedata
+**/xcshareddata/WorkspaceSettings.xcsettings
 
 ### AndroidStudio ###
 # Covers files to be ignored for android development using Android Studio.
@@ -219,4 +254,4 @@ fabric.properties
 
 !/gradle/wrapper/gradle-wrapper.jar
 
-# End of https://www.toptal.com/developers/gitignore/api/flutter,dart,androidstudio
+# End of https://www.toptal.com/developers/gitignore/api/flutter,dart,androidstudio,xcode
